# chunk-grouping

./: CMakeLists.txt  config.toml  delta_compression.cpp  delta_compression.h  down_load_test_data.sh  main.cpp  our_feature.h  readme.md
chunk/: chunk.h
encoder/: xdelta.h
feature/: CMakeLists.txt  features.cpp  features.h
index/: best_fit_index.h  index.h  palantir_index.cpp  palantir_index.h  super_feature_index.cpp  super_feature_index.h
storage/: CMakeLists.txt  our_feature.cpp  storage.cpp  storage.h
test_data/: synthetic_data.py
